Use UTF8 as a default in ServiceWorkerInstalledScriptsManager

WorkerScriptLoader is using UTF8 as a default encoding.
But currently ServiceWorkerInstalledScriptsManager is using latin1 as a default encoding.

Bug: 787736
Change-Id: I5a871fd87b994ad4d439f822e9254ca5df3af76b
Reviewed-on: https://chromium-review.googlesource.com/784741
Reviewed-by: Makoto Shimazu <shimazu@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518589}
Former-commit-id: ec3780d41eba72e398e2984382330984ce7f347a