third_party/WebKit/Source/core/workers/WorkerScriptLoader.cpp
@@ -172,14 +172,10 @@ void WorkerScriptLoader::DidReceiveData(const char* data, unsigned len) {
     return;
 
   if (!decoder_) {
-    if (!response_encoding_.IsEmpty()) {
-      decoder_ = TextResourceDecoder::Create(TextResourceDecoderOptions(
-          TextResourceDecoderOptions::kPlainTextContent,
-          WTF::TextEncoding(response_encoding_)));
-    } else {
-      decoder_ = TextResourceDecoder::Create(TextResourceDecoderOptions(
-          TextResourceDecoderOptions::kPlainTextContent, UTF8Encoding()));
-    }
+    decoder_ = TextResourceDecoder::Create(TextResourceDecoderOptions(
+        TextResourceDecoderOptions::kPlainTextContent,
+        response_encoding_.IsEmpty() ? UTF8Encoding()
+                                     : WTF::TextEncoding(response_encoding_)));
   }
 
   if (!len)
